# pros

./: .gitignore  README.md  TODO.todo  Untitled.ipynb  all_data.ipynb  docker-command  docker-command.sh  itemlookup.cypher  itemlookup_fixed_hopefully.cypher  itemlookup_fixed_not_quite.cypher  itemlookup_nearly_there.cypher  json_schema.py  manage.py  multilookupdict.py  package-lock.json  package.json  pyproject.toml  query.cypher  template_overrides.ts  test.js  test.py  test2.js  test2.py  test3.py  test4.py  test5.py  testdata.py  testqueryset.py  testzotero.py  unpack_person_info.cypher  wfunc.cypher
frontend/: serializers.py  urls.py  utils.py  views.py
interface/: index.html  interface-config.tsx  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tailwind.config.js  vite.config.ts
interface-solid/: index.html  interface-config.js  package-lock.json  package.json  tailwind.config.js
interfaceOLD/: package-lock.json  package.json
manmax_test/: apps.py  models.py
neomodel/: core.py  match.py  neo4j_date.py  properties.py  relationship_manager.py  testdates.ipynb
pros/: asgi.py  django_initializer.py  settings.py  urls.py  wsgi.py
pros_core/: apps.py  build_json_schema.py  filters.py  json_schema.py  models.py  renderers.py  setup_app.py  viewsets.py
pros_dating/: apps.py  models.py
pros_import/: apps.py  models.py  urls.py  viewsets.py
pros_uris/: apps.py  models.py
pros_vocabs/: apps.py  models.py  viewsets.py
pros_zotero/: apps.py
src/: app.html
test_app/: apps.py  models.py  modelsBK.py
users/: serializers.py  (+2 more)
(+95 files in other folders)
